perforator: document diffs commit_hash:93dc5f8882e86abd56b9043bd9b85c4aff03fb5c

--- a/.mapping.json
+++ b/.mapping.json
@@ -25,7 +25,10 @@
   "docs/_assets/py-flame-optimized.jpg":"perforator/docs/opensource/_assets/py-flame-optimized.jpg",
   "docs/_assets/py-flame-user-id-search-handler.jpg":"perforator/docs/opensource/_assets/py-flame-user-id-search-handler.jpg",
   "docs/_assets/selector_example.png":"perforator/docs/opensource/_assets/selector_example.png",
+  "docs/_assets/ui-empty-diff.png":"perforator/docs/opensource/_assets/ui-empty-diff.png",
+  "docs/_assets/ui-filled-diff.png":"perforator/docs/opensource/_assets/ui-filled-diff.png",
   "docs/_assets/ui-flame-page.png":"perforator/docs/opensource/_assets/ui-flame-page.png",
+  "docs/_assets/ui-half-baseline-diff.png":"perforator/docs/opensource/_assets/ui-half-baseline-diff.png",
   "docs/_assets/ui-initial-filled-page.png":"perforator/docs/opensource/_assets/ui-initial-filled-page.png",
   "docs/_assets/ui-initial-page.png":"perforator/docs/opensource/_assets/ui-initial-page.png",
   "docs/_assets/ui-tasks-page.png":"perforator/docs/opensource/_assets/ui-tasks-page.png",
@@ -38,6 +41,7 @@
   "docs/en/guides/cli/list_services.md":"perforator/docs/opensource/en/guides/cli/list_services.md",
   "docs/en/guides/cli/microscope.md":"perforator/docs/opensource/en/guides/cli/microscope.md",
   "docs/en/guides/cli/record.md":"perforator/docs/opensource/en/guides/cli/record.md",
+  "docs/en/guides/diff.md":"perforator/docs/opensource/en/guides/diff.md",
   "docs/en/guides/docker-compose.md":"perforator/docs/opensource/en/guides/docker-compose.md",
   "docs/en/guides/helm-chart.md":"perforator/docs/opensource/en/guides/helm-chart.md",
   "docs/en/guides/jvm.md":"perforator/docs/opensource/en/guides/jvm.md",
