--- a/.mapping.json
+++ b/.mapping.json
@@ -69,9 +69,13 @@
   "docs/ya.make":"perforator/docs/opensource/ya.make",
   "go.mod":"perforator/opensource/github_toplevel/go.mod",
   "perforator/ui-union/ya.make":"perforator/ui-union/ya.make.external",
+  "perforator/ui/app/package.json":"perforator/ui/app/external/package.json",
+  "perforator/ui/app/pnpm-lock.yaml":"perforator/ui/app/external/pnpm-lock.yaml",
+  "perforator/ui/app/src/vite/setup.ts":"perforator/ui/app/src/vite/setup.external.ts",
   "perforator/ui/package.json":"perforator/ui/external/package.json",
   "perforator/ui/pnpm-lock.yaml":"perforator/ui/external/pnpm-lock.yaml",
   "perforator/ui/src/vite/setup.ts":"perforator/ui/src/vite/setup.external.ts",
+  "perforator/ui/union/ya.make":"perforator/ui/union/ya.make.external",
   "ya":"devtools/ya/opensource/ya",
   "ya.conf":"devtools/ya/opensource/ya.conf"
 }
