--- a/perforator/deploy/db/docker-compose/compose.yaml
+++ b/perforator/deploy/db/docker-compose/compose.yaml
@@ -56,6 +56,31 @@ services:
     networks:
     - perforator_network
 
+  # Creates a container that builds and applies migrations for postgres and clickhouse dbs
+  migrate:
+    image: ghcr.io/yandex/perforator/migrate:v0.0.2
+    depends_on:
+      - postgres
+      - clickhouse
+    # Maybe move it to .env file and add references including for the clickhouse and postgres containers.
+    environment:
+      PS_DB_HOST: "postgres"
+      PS_DB_PORT: 5432
+      PS_DB_USER: "perforator"
+      PS_DB_PASSWORD: "perforator"
+      PS_DB_NAME: "perforator"
+      CH_DB_HOST: "clickhouse"
+      CH_DB_PORT: 9000
+      CH_DB_USER: "perforator"
+      CH_DB_PASSWORD: "perforator"
+      CH_DB_NAME: "perforator"
+    entrypoint: >
+      sh -c "sleep 25;
+             ./perforator/migrate postgres up --hosts $${PS_DB_HOST} --port $${PS_DB_PORT} --db $${PS_DB_NAME} --user $${PS_DB_USER} --pass $${PS_DB_PASSWORD} --insecure;
+             ./perforator/migrate clickhouse up --hosts $${CH_DB_HOST} --port $${CH_DB_PORT} --db $${CH_DB_NAME} --user $${CH_DB_USER} --pass $${CH_DB_PASSWORD} --insecure;
+             "
+    networks:
+    - perforator_network
   minio:
     image: minio/minio:latest
     restart: always
