Allow customizing environment variables in helm chart commit_hash:9944d470f34ea319d125f87d13f9cf9d6d23cc24

--- a/perforator/deploy/kubernetes/helm/perforator/templates/agent/daemonset.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/agent/daemonset.yaml
@@ -54,6 +54,10 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: spec.nodeName
+        {{- range .Values.agent.extraEnv }}
+        - name: {{ .name }}
+          value: {{ .value }}
+        {{- end }}
         resources:
         {{- toYaml .Values.agent.resources | nindent 10 }}
         {{- with .Values.agent.containerSecurityContext }}
