--- a/perforator/deploy/kubernetes/helm/perforator/templates/gc/deployment.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/gc/deployment.yaml
@@ -92,6 +92,10 @@ spec:
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef: {{ include "perforator.secretKeyRef.postgresql" . | nindent 14 }}
+        {{- range .Values.gc.extraEnv }}
+        - name: {{ .name }}
+          value: {{ .value }}
+        {{- end }}
       volumes:
       - name: storage-s3-keys
         secret:
