--- a/perforator/deploy/kubernetes/helm/perforator/templates/offline-processing/deployment.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/offline-processing/deployment.yaml
@@ -88,6 +88,10 @@ spec:
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef: {{ include "perforator.secretKeyRef.postgresql" . | nindent 14 }}
+        {{- range .Values.offlineprocessing.extraEnv }}
+        - name: {{ .name }}
+          value: {{ .value }}
+        {{- end }}
       volumes:
       - name: cache
         emptyDir: {}
