Use status.hostIP for kubelet requests commit_hash:fdc60fe71c26abe6abb90bdafd971b821b0664c1

--- a/perforator/deploy/kubernetes/helm/perforator/templates/agent/daemonset.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/agent/daemonset.yaml
@@ -50,10 +50,14 @@ spec:
         - {{ . }}
           {{- end}}
         env:
-          - name: NODE_NAME
-            valueFrom:
-              fieldRef:
-                fieldPath: spec.nodeName
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        - name: NODE_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
         {{- range .Values.agent.extraEnv }}
         - name: {{ .name }}
           value: {{ .value }}
