Add extra mounts to database migration jobs
For now this is the only way to get working TLS when ClickHouse certificates are issued by a custom CA.
commit_hash:d4388ef971220e4a593053ef7f09f95247970530

--- a/perforator/deploy/kubernetes/helm/perforator/templates/migrate/job-ch.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/migrate/job-ch.yaml
@@ -47,5 +47,18 @@ spec:
         - name: {{ .name }}
           value: {{ .value }}
         {{- end }}
+        volumeMounts:
+        {{- range .Values.databases.clickhouse.migrations.extraMounts }}
+        - name: {{ .name }}
+          mountPath: {{ .mountPath }}
+          subPath: {{ .subPath }}
+          readOnly: {{ .readOnly }}
+        {{- end }}
+      volumes:
+      {{- range .Values.databases.clickhouse.migrations.extraMounts }}
+      - name: {{ .name }}
+        configMap:
+          name: {{ .configMap }}
+      {{- end }}
   ttlSecondsAfterFinished: {{ .Values.databases.clickhouse.migrations.ttlSecondsAfterFinished }}
 {{- end}}
