--- a/perforator/deploy/kubernetes/helm/perforator/templates/migrate/job-pg.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/migrate/job-pg.yaml
@@ -47,5 +47,18 @@ spec:
         - name: {{ .name }}
           value: {{ .value }}
         {{- end }}
+        volumeMounts:
+        {{- range .Values.databases.postgresql.migrations.extraMounts }}
+        - name: {{ .name }}
+          mountPath: {{ .mountPath }}
+          subPath: {{ .subPath }}
+          readOnly: {{ .readOnly }}
+        {{- end }}
+      volumes:
+      {{- range .Values.databases.postgresq.migrations.extraMounts }}
+      - name: {{ .name }}
+        configMap:
+          name: {{ .configMap }}
+      {{- end }}
   ttlSecondsAfterFinished: {{ .Values.databases.postgresql.migrations.ttlSecondsAfterFinished }}
 {{- end}}
