--- a/.mapping.json
+++ b/.mapping.json
@@ -24,6 +24,12 @@
   "docs/_assets/py-flame-loaded.jpg":"perforator/docs/opensource/_assets/py-flame-loaded.jpg",
   "docs/_assets/py-flame-optimized.jpg":"perforator/docs/opensource/_assets/py-flame-optimized.jpg",
   "docs/_assets/py-flame-user-id-search-handler.jpg":"perforator/docs/opensource/_assets/py-flame-user-id-search-handler.jpg",
+  "docs/_assets/py-runtime-thread-state.svg":"perforator/docs/opensource/_assets/py-runtime-thread-state.svg",
+  "docs/_assets/py-stack-merging.svg":"perforator/docs/opensource/_assets/py-stack-merging.svg",
+  "docs/_assets/py-stack-walk.svg":"perforator/docs/opensource/_assets/py-stack-walk.svg",
+  "docs/_assets/py-symbols-cache.svg":"perforator/docs/opensource/_assets/py-symbols-cache.svg",
+  "docs/_assets/py-threadstate-mapping.svg":"perforator/docs/opensource/_assets/py-threadstate-mapping.svg",
+  "docs/_assets/py-tls.svg":"perforator/docs/opensource/_assets/py-tls.svg",
   "docs/_assets/selector_example.png":"perforator/docs/opensource/_assets/selector_example.png",
   "docs/_assets/ui-empty-diff.png":"perforator/docs/opensource/_assets/ui-empty-diff.png",
   "docs/_assets/ui-filled-diff.png":"perforator/docs/opensource/_assets/ui-filled-diff.png",
