--- a/perforator/deploy/kubernetes/helm/perforator/templates/internal/tls.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/internal/tls.yaml
@@ -1,5 +1,14 @@
 {{- $ca := genCA (printf "%s-storage-service-ca" (include "perforator.fullname" .)) 3650 }}
-{{- $storageCert := genSignedCert (printf "%s-storage-service" (include "perforator.fullname" .)) nil (list (printf "%s-storage-service" (include "perforator.fullname" .))) 3650 $ca }}
+{{- $storageCert := dict }}
+{{- if .Values.storage.hostname }}
+{{- $hostname := toString .Values.storage.hostname }}
+{{- if contains ":" $hostname }}
+  {{- $hostname = index (regexSplit ":" $hostname -1) 0 }}
+{{- end }}
+{{- $storageCert = genSignedCert $hostname  nil (list $hostname) 3650 $ca }}
+{{- else }}
+{{- $storageCert = genSignedCert (printf "%s-storage-service" (include "perforator.fullname" .)) nil (list (printf "%s-storage-service" (include "perforator.fullname" .))) 3650 $ca }}
+{{- end }}
 {{- $storageSecretName := printf "%s-storage-crt" (include "perforator.fullname" .) }}
 apiVersion: v1
 data:
