--- a/perforator/deploy/kubernetes/helm/perforator/templates/storage/metrics-service.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/storage/metrics-service.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.storage.metrics.enabled }}
+{{- if and .Values.storage.enabled .Values.storage.metrics.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
