--- a/perforator/deploy/kubernetes/helm/perforator/templates/gc/deployment.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/gc/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.gc.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -130,3 +131,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
