--- a/perforator/deploy/kubernetes/helm/perforator/templates/gc/metrics-service.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/gc/metrics-service.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.gc.metrics.enabled }}
+{{- if and .Values.gc.enabled  .Values.gc.metrics.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
