--- a/perforator/deploy/kubernetes/helm/perforator/templates/proxy/configmap.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/proxy/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.proxy.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,4 +9,5 @@ data:
   config.yaml: |- {{- tpl .Values.proxy.config.custom . | nindent 4 }}
 {{- else }}
   config.yaml: |- {{- tpl (.Files.Get "config/proxy.yaml") . | nindent 4 }}
+{{- end }}
 {{- end }}
