--- a/perforator/deploy/kubernetes/helm/perforator/templates/proxy/service.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/proxy/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.proxy.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -35,3 +36,4 @@ spec:
   ipFamilies:
     - {{ . }}
   {{- end}}
+{{- end }}
