--- a/perforator/deploy/kubernetes/helm/perforator/templates/storage/servicemonitor.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/storage/servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.storage.metrics.enabled) (.Values.storage.metrics.serviceMonitor.enabled) }}
+{{- if and .Values.storage.enabled (and (.Values.storage.metrics.enabled) (.Values.storage.metrics.serviceMonitor.enabled)) }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
