[perforator][helm] add postgresql, clickhouse, minio subcharts for testing purposes commit_hash:15886a55d3addfa44330664a987fe8fdffcb25e2

--- a/perforator/deploy/kubernetes/helm/perforator/Chart.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/Chart.yaml
@@ -1,6 +1,11 @@
 apiVersion: v2
 name: perforator
 description: Perforator cluster-wide continuous profiling system (https://github.com/yandex/perforator)
+dependencies:
+- condition: testing.enableTestingDatabases
+  name: perforator-dev
+  alias: testing
+  version: 0.x.x
 
 type: application
 
