--- a/perforator/deploy/kubernetes/helm/perforator/templates/db-credentials/clickhouse-password.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/db-credentials/clickhouse-password.yaml
@@ -6,4 +6,6 @@ kind: Secret
 metadata:
   name: {{ include "perforator.fullname" . }}-clickhouse-password
   namespace: {{ .Release.Namespace }}
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
 {{- end -}}
