--- a/perforator/deploy/kubernetes/helm/perforator/templates/migrate/job-ch.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/migrate/job-ch.yaml
@@ -1,14 +1,17 @@
 {{- if .Values.databases.clickhouse.migrations.enabled }}
 
 {{- $chhosts := "" }}
-{{- range .Values.databases.clickhouse.replicas }}
+{{- $port := "" }}
+{{- $endpoints := include "perforator.clickhouse.endpoints" . | fromYamlArray }}
+{{- range $endpoints }}
   {{- $hostparts := splitn ":" 2 . }}
   {{- $chhosts = printf "%s%s," $chhosts $hostparts._0 }}
+  {{- $port = $hostparts._1 }}
 {{- end }}
 {{ $chhosts = $chhosts | trimSuffix "," }}
 {{- $insecure := "" }}
 {{- if .Values.databases.clickhouse.insecure }}
-  {{- $insecure = " --insecure" }}
+  {{- $insecure = " --tls-trust-all" }}
 {{- end }}
 
 apiVersion: batch/v1
@@ -37,7 +40,7 @@ spec:
         - -c
         - |
           set -eu
-          /perforator/migrate clickhouse up --db {{ .Values.databases.clickhouse.db }} --hosts {{ $chhosts }} --user {{ .Values.databases.clickhouse.user }} --pass ${PASSWORD} {{ $insecure }} {{ .Values.databases.clickhouse.migrations.extraArgs }}
+          /perforator/migrate clickhouse up --db {{ .Values.databases.clickhouse.db }} --hosts {{ $chhosts }} --port {{ $port }} --user {{ .Values.databases.clickhouse.user }} --pass ${PASSWORD} {{ $insecure }} {{ .Values.databases.clickhouse.migrations.extraArgs }}
         env:
         - name: PASSWORD
           valueFrom:
