--- a/perforator/deploy/kubernetes/helm/perforator/templates/db-credentials/postgresql-password.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/db-credentials/postgresql-password.yaml
@@ -6,4 +6,7 @@ kind: Secret
 metadata:
   name: {{ include "perforator.fullname" . }}-postgresql-password
   namespace: {{ .Release.Namespace }}
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "-10"
 {{- end -}}
