--- a/perforator/deploy/kubernetes/helm/perforator/templates/db-credentials/s3-keys.yaml
+++ b/perforator/deploy/kubernetes/helm/perforator/templates/db-credentials/s3-keys.yaml
@@ -7,4 +7,7 @@ kind: Secret
 metadata:
   name: {{ include "perforator.fullname" . }}-storage-s3-keys
   namespace: {{ .Release.Namespace }}
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "-10"
 {{- end -}}
